Fix album cover overlaping the card

--- a/src/app/shared/component/album-card/album-card.component.scss
+++ b/src/app/shared/component/album-card/album-card.component.scss
@@ -6,8 +6,8 @@
 
 .album-card,
 .card {
-  min-width: 160px;
-  max-width: 160px;
+  min-width: 162px;
+  max-width: 162px;
 }
 
 /* Remove underlines on the card text */
